--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,10 @@
-body {
-  background-color: lightblue;
+html,body {
+ margin: 0;
+ padding: 0;
+ overflow: hidden;
+ background-color: black;
+}
+canvas {
+  margin: auto;
+  
 }
