--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,16 @@
 body {
-  background-color: lightblue;
+  padding: 0;
+  margin: 0;
+  background-color: white;
+  width: 100%;
+  text-align:center;
+  overflow: hidden;
+}
+
+html {
+  padding: 0;
+  margin: 0;
+}
+canvas {
+  display: inline;
 }
