--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: white;
+  background-color: #000;
   width: 100%;
   text-align:center;
   overflow: hidden;
