--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   width: 100%;
   text-align:center;
   overflow: hidden;
